# deepviz

./: .gitignore  LICENSE  readme.md
backend/: pyproject.toml
backend/config/: model_parse.toml
backend/src/decorator/: model_parse_decorator.py
backend/src/utils/: model_parser.py
backend/test/: test_ModelParser.py
frontend/: .eslintignore  .eslintrc.cjs  .prettierignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: NeuralNetworkVisualization.vue
frontend/src/models/: shapeFactory.ts
frontend/src/types/: nerual-network.ts  neural-network.ts
frontend/src/utils/: network-visualization.ts  parser.ts  three-helpers.ts
