[project]
name = "deepviz-backend"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "numpy>=1.26.0",
    "Pillow>=10.1.0",
    "json5>=0.9.14",
    "fastapi>=0.116.1",
]


[tool.uv.sources]
torch = [
    {index = "pytorch-cpu", marker = "sys_platform != 'linux'"},
    {index = "pytorch-cu128", marker = "sys_platform == 'linux'"},
]
torchvision = [
    {index = "pytorch-cpu", marker = "sys_platform != 'linux'"},
    {index = "pytorch-cu128", marker = "sys_platform == 'linux'"},
]

[tool.uv]
package = true

[tool.ruff]
include = ["src/utils/*.py", "test/*.py"]

[tool.ruff.lint]
# 忽略特定规则（按需添加）
ignore = [
    "D100",  # 忽略缺少模块文档字符串
    "D104",  # 忽略缺少类文档字符串
]

[tool.pytest.ini_options]
testpaths = ["test/*.py"]
addopts="""
-v
--tb=line
"""


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
